public/css/recensie-manager-public.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

 /* FORM */
 #recman_form input {
  margin: 10px 0;
  width: 100%;
  padding: 10px;
  font-size: 14px;
}

#recman_form textarea {
  width: 100%;
  font-size: 14px;
}

#recman_form p {
  margin: 10px 0;
}

.recmansubmitted {
  text-align: center;
}

#recman-error {
  border: red 1px dotted;
  padding: 10px;
}


  /* STARS */
  .rating-group {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    margin-bottom: 20px;
  }
  
  /* make hover effect work properly in IE */
  .rating__icon {
    pointer-events: none;
  }
  
  /* hide radio inputs */
  .rating__input {
   position: absolute !important;
   left: -9999px !important;
  }
  
  /* hide 'none' input from screenreaders */
  .rating__input--none {
    display: none
  }

  /* set icon padding and size */
  .rating__label {
    cursor: pointer;
    padding: 0 0.1em;
  }
  
  /* set default star color */
  .rating__icon--star {
    color: orange;
  }

  /* if any input is checked, make its following siblings grey */
  .rating__input:checked ~ .rating__label .rating__icon--star {
    color: #ddd;
  }
  
  /* make all stars orange on rating group hover */
  .rating-group:hover .rating__label .rating__icon--star {
    color: orange;
  }

  /* make hovered input's following siblings grey on hover */
  .rating__input:hover ~ .rating__label .rating__icon--star {
    color: #ddd;
  }

  /* SIDEBAR */
.recmanWidget {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 9999999; /* Stay on top */
  top: 0; /* Stay at the top */
  right: 0;
  background-color: #fff;
  -webkit-box-shadow: 0 0 0 3px rgba(0,0,0,.1);
          box-shadow: 0 0 0 3px rgba(0,0,0,.1);
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px; /* Place content 60px from the top */
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

.recmanWidget-content {
  padding: 8px 8px 8px 32px;
  font-weight: 400;
}

.recmanWidget-content h3 {
  margin: 20px 0;
}

/* The navigation menu links */
.recmanWidget-content p {
  text-decoration: none;
  display: block;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  max-height: 50vh;
  overflow: scroll;
}

.recmanWidget-content-name {
  font-style: italic;
}

/* When you mouse over the navigation links, change their color */
.recmanWidget a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.recmanWidget .closebtn {
  position: absolute;
  top: 5;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.hide-review {
  display: none !important;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

/* NAVIGATION IN SIDEBAR */
.recmanWidget-navbar {
  overflow: hidden;
  position: absolute;
  bottom: 0;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.recmanWidget-navbar a {
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
}

/* FLOAT BUTTON  */
.recman_float{
	position:fixed;
	bottom:40px;
	right:-30px;
	border-radius:50px;
	text-align:center;
  -webkit-box-shadow: 2px 2px 3px #999;
          box-shadow: 2px 2px 3px #999;
  z-index: 999999;  
  text-decoration: none;
  padding-left: 80px;
  padding-right: 80px;
}

.recman_float i {
margin-right: 10px;  
}

@media screen and (max-width: 650px) {
  .recman_float{
    max-width: 120px !important;
    padding-left: 40px;
    padding-right: 40px;
  }
  .recman_float span {
    display: none;
  }
}

